--- a/src/main/webapp/app/entities/order-item/order-item-detail.component.html
+++ b/src/main/webapp/app/entities/order-item/order-item-detail.component.html
@@ -23,7 +23,7 @@
                 <dt><span jhiTranslate="storeApp.orderItem.product">Product</span></dt>
                 <dd>
                     <div *ngIf="orderItem.product">
-                        <a [routerLink]="['/product', orderItem.product?.id, 'view']">{{ orderItem.product?.id }}</a>
+                        <a [routerLink]="['/product', orderItem.product?.id, 'view']">{{ orderItem.product?.name }}</a>
                     </div>
                 </dd>
                 <dt><span jhiTranslate="storeApp.orderItem.order">Order</span></dt>
