--- a/src/main/webapp/app/entities/order-item/order-item.component.html
+++ b/src/main/webapp/app/entities/order-item/order-item.component.html
@@ -44,7 +44,7 @@
                     </td>
                     <td>
                         <div *ngIf="orderItem.order">
-                            <a [routerLink]="['/product-order', orderItem.order?.id, 'view']" >{{ orderItem.order?.code }}</a>
+                            <a [routerLink]="['/','product-order', orderItem.order?.id, 'view']" >{{ orderItem.order?.code }}</a>
                         </div>
                     </td>
                     <td class="text-right">
