--- a/src/main/webapp/app/entities/product-order/product-order-detail.component.html
+++ b/src/main/webapp/app/entities/product-order/product-order-detail.component.html
@@ -16,6 +16,10 @@
                 <dd>
                     <span jhiTranslate="{{ 'storeApp.OrderStatus.' + productOrder.status }}">{{ productOrder.status }}</span>
                 </dd>
+                <dt><span jhiTranslate="storeApp.productOrder.invoiceId">Invoice Id</span></dt>
+                <dd>
+                    <span>{{ productOrder.invoiceId }}</span>
+                </dd>
                 <dt><span jhiTranslate="storeApp.productOrder.code">Code</span></dt>
                 <dd>
                     <span>{{ productOrder.code }}</span>
