--- a/src/main/webapp/app/entities/product-order/product-order-update.component.html
+++ b/src/main/webapp/app/entities/product-order/product-order-update.component.html
@@ -44,6 +44,12 @@
                 </div>
 
                 <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="storeApp.productOrder.invoiceId" for="field_invoiceId">Invoice Id</label>
+                    <input type="number" class="form-control" name="invoiceId" id="field_invoiceId"
+                           formControlName="invoiceId"/>
+                </div>
+
+                <div class="form-group">
                     <label class="form-control-label" jhiTranslate="storeApp.productOrder.code" for="field_code">Code</label>
                     <input type="text" class="form-control" name="code" id="field_code"
                            formControlName="code"/>
