--- a/src/main/webapp/app/entities/product-order/product-order.component.html
+++ b/src/main/webapp/app/entities/product-order/product-order.component.html
@@ -2,7 +2,7 @@
     <h2 id="page-heading">
         <span jhiTranslate="storeApp.productOrder.home.title">Product Orders</span>
 
-        <button *jhiHasAnyAuthority="'ROLE_ADMIN'" id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-product-order" [routerLink]="['/product-order/new']">
+        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-product-order" [routerLink]="['/product-order/new']">
             <fa-icon icon="plus"></fa-icon>
             <span  jhiTranslate="storeApp.productOrder.home.createLabel">
             Create a new Product Order
@@ -25,6 +25,7 @@
                     <th scope="col"  jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon icon="sort"></fa-icon></th>
                     <th scope="col"  jhiSortBy="placedDate"><span jhiTranslate="storeApp.productOrder.placedDate">Placed Date</span> <fa-icon icon="sort"></fa-icon></th>
                     <th scope="col"  jhiSortBy="status"><span jhiTranslate="storeApp.productOrder.status">Status</span> <fa-icon icon="sort"></fa-icon></th>
+                    <th scope="col"  jhiSortBy="invoiceId"><span jhiTranslate="storeApp.productOrder.invoiceId">Invoice Id</span> <fa-icon icon="sort"></fa-icon></th>
                     <th scope="col"  jhiSortBy="code"><span jhiTranslate="storeApp.productOrder.code">Code</span> <fa-icon icon="sort"></fa-icon></th>
                     <th scope="col"  jhiSortBy="customer.email"><span jhiTranslate="storeApp.productOrder.customer">Customer</span> <fa-icon icon="sort"></fa-icon></th>
                     <th scope="col"></th>
@@ -35,6 +36,7 @@
                     <td><a [routerLink]="['/product-order', productOrder.id, 'view']">{{ productOrder.id }}</a></td>
                     <td>{{ productOrder.placedDate | date:'medium' }}</td>
                     <td jhiTranslate="{{ 'storeApp.OrderStatus.' + productOrder.status }}">{{ productOrder.status }}</td>
+                    <td>{{ productOrder.invoiceId }}</td>
                     <td>{{ productOrder.code }}</td>
                     <td>
                         <div *ngIf="productOrder.customer">
@@ -50,14 +52,14 @@
                                 <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                             </button>
 
-                            <button *jhiHasAnyAuthority="'ROLE_ADMIN'" type="submit"
+                            <button type="submit"
                                     [routerLink]="['/product-order', productOrder.id, 'edit']"
                                     class="btn btn-primary btn-sm">
                                 <fa-icon icon="pencil-alt"></fa-icon>
                                 <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
                             </button>
 
-                            <button *jhiHasAnyAuthority="'ROLE_ADMIN'" type="submit" (click)="delete(productOrder)"
+                            <button type="submit" (click)="delete(productOrder)"
                                     class="btn btn-danger btn-sm">
                                 <fa-icon icon="times"></fa-icon>
                                 <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
